# aoc2021

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  flake.nix
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
input/: 04.txt  04_example.txt  08_example3.txt  08_example4.txt  19.txt  23.txt  23_example_part2.txt  23_part2.txt
source/: advent.hpp  bitcode.hpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  intersect.hpp  main.cpp  util.hpp
test/: CMakeLists.txt
test/source/: aoc2021_test.cpp
